@@ -1,2 +1,10 @@
 # B52Shooting
 Shoot as many B52s as you can!
+
+Compile and run (on Windows, using CMD)
+```bash
+set PATH_TO_FX="path\to\your\javafx-sdk-14\lib"
+javac --module-path %PATH_TO_FX% --add-modules javafx.controls SpaceInvaders.java
+java --module-path %PATH_TO_FX% --add-modules javafx.controls SpaceInvaders
+
+```
